--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
+    "@types/pg": "^8.11.13",
     "i": "^0.3.7",
     "nodemon": "^3.1.9",
     "npm": "^11.3.0",
@@ -20,7 +21,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "pg": "^8.15.5"
   },
   "description": ""
 }
