--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
+    "@types/express": "^5.0.3",
     "@types/node": "^22.15.2",
     "@types/pg": "^8.11.13",
+    "@types/swagger-ui-express": "^4.1.8",
     "i": "^0.3.7",
     "nodemon": "^3.1.10",
     "npm": "^11.3.0",
+    "swagger-autogen": "^2.23.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
@@ -25,7 +27,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.15.5"
+    "pg": "^8.15.5",
+    "swagger-ui-express": "^5.0.1"
   },
   "description": ""
 }
