--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.15.2",
     "@types/pg": "^8.11.13",
     "@types/swagger-ui-express": "^4.1.8",
@@ -27,6 +28,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "pg": "^8.15.5",
     "swagger-ui-express": "^5.0.1"
   },
